# cpp_oop

./: .gitignore  README.md
neyman_a_d/: .build.bat  CMakeLists.txt  CMakePresets.json
neyman_a_d/prj.lab/: CMakeLists.txt
neyman_a_d/prj.lab/arrayd/: CMakeLists.txt
neyman_a_d/prj.lab/arrayd/include/arrayd/: arrayd.hpp
neyman_a_d/prj.lab/arrayt/: CMakeLists.txt
neyman_a_d/prj.lab/arrayt/include/arrayt/: arrayt.hpp
neyman_a_d/prj.lab/matrixs/: CMakeLists.txt
neyman_a_d/prj.lab/matrixs/include/matrixs/: matrixs.hpp
neyman_a_d/prj.lab/orto/: orto.20230519  orto.cpp
neyman_a_d/prj.lab/rational/: CMakeLists.txt
neyman_a_d/prj.lab/rational/include/rational/: rational.hpp
neyman_a_d/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  doctest_test.cpp  matrixs_test.cpp  rational_test.cpp
